<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioptyu2.qrtest.login"
    android:background="@drawable/backgroundlogin">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/camerabtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="buttonToCamera"
        app:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="333dp"
        android:contentDescription="@string/geofood_logo"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/usernameL"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_above="@+id/cardView"
        android:layout_alignLeft="@+id/passwordL"
        android:layout_alignStart="@+id/passwordL"
        android:layout_marginBottom="54dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="14sp" android:drawableStart="@drawable/ic_action_user"/>

    <EditText
        android:id="@+id/passwordL"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/usernameL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" android:drawableStart="@drawable/ic_action_password"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
        app:cardCornerRadius="25dp"
        app:cardElevation="24dp">

        <RelativeLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/cardView"
            android:layout_alignLeft="@+id/cardView"
            android:layout_alignStart="@+id/cardView"
            android:layout_marginBottom="14dp"
            android:onClick="onLogin">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="24sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:onClick="buttonToRegister"
        android:text="@string/register_here"
        android:textColor="#fff" />
</RelativeLayout>
